[package]
name = "fnsql"
version = "0.2.5"
edition = "2021"
keywords = ["sql", "proc_macro", "procmacro"]
license = "MIT/Apache-2.0"
description = "Type-safe SQL query wrappers"
homepage = "https://github.com/da-x/fnsql"
repository = "https://github.com/da-x/fnsql"
categories = ["database"]
readme = "crates-io.md"
include = ["Cargo.toml", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[features]
default = []
all = ["with-rusqlite", "with-postgres", "prepare-cache"]
with-rusqlite = ["fnsql-macro/with-postgres"]
with-postgres = ["fnsql-macro/with-rusqlite", "postgres"]
prepare-cache = ["fnsql-macro/prepare-cache"]

[dependencies]
fnsql-macro = "0.2.5"
postgres = { version = "0.19", optional = true }
