[package]
name = "fnsql"
version = "0.2.3"
edition = "2021"
keywords = ["sql", "proc_macro", "procmacro"]
license = "MIT/Apache-2.0"
description = "Type-safe SQL query wrappers"
homepage = "https://github.com/da-x/fnsql"
repository = "https://github.com/da-x/fnsql"
categories = ["database"]
readme = "crates-io.md"
include = ["Cargo.toml", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"

[dev-dependencies]
rusqlite = "0.26.3"
arbitrary = { version = "1", features = ["derive"] }
