[package]
name = "fnsql-macro"
version = "0.2.6"
edition = "2021"
keywords = ["sql", "proc_macro", "procmacro"]
license = "MIT/Apache-2.0"
description = "Type-safe SQL query wrappers"
homepage = "https://github.com/da-x/fnsql"
repository = "https://github.com/da-x/fnsql"
categories = ["database"]
readme = "crates-io.md"
include = ["Cargo.toml", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
proc-macro = true

[features]
default = []
all = ["with-rusqlite", "with-postgres", "prepare-cache"]
with-rusqlite = []
with-postgres = []
prepare-cache = []

[dependencies]
quote = "1"
proc-macro2 = "1.0"
lazy_static = "1.4"
syn = "1.0"
regex = "1.5"

[dev-dependencies]
rusqlite = "0.26.3"
fnsql = "0.2.6"
arbitrary = { version = "1", features = ["derive"] }
